testcases/valid/imports/standard-library-import.wacc
begin
  int[] a = [2,1,3];
  int n = call min(a);
  println n
end